--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@keyframes slide {
+  0% { transform: translateX(0);}
+  100% { transform: translateX(-50%); }
+}
+
+.animate-slide {
+  animation: slide 25s linear infinite;
+}
