--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 @import "tailwindcss";
 
-@keyframes slide {
-  0% { transform: translateX(0);}
-  100% { transform: translateX(-50%); }
+
+html {
+  scroll-behavior: smooth;
 }
 
-.animate-slide {
-  animation: slide 25s linear infinite;
-}
+
